--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
         "@angular/platform-browser-dynamic": "~13.0.0",
         "@angular/router": "~13.0.0",
         "chart.js": "^3.3.2",
+        "file-saver": "^2.0.5",
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.5.25",
         "primeflex": "^3.2.0",
         "primeicons": "5.0.0",
         "primeng": "13.4.0",
@@ -27,12 +30,14 @@
         "rxjs": "~7.4.0",
         "tslib": "^2.3.0",
         "web-animations-js": "^2.3.2",
+        "xlsx": "^0.18.5",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~13.0.4",
         "@angular/cli": "~13.0.4",
         "@angular/compiler-cli": "~13.0.0",
+        "@types/file-saver": "^2.0.5",
         "@types/jasmine": "~3.10.0",
         "@types/jasminewd2": "~2.0.8",
         "@types/node": "^12.11.1",
