--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
         "primeflex": "^3.2.0",
         "primeicons": "5.0.0",
         "primeng": "13.4.0",
-        "prismjs": "1.9.0",
+        "prismjs": "^1.28.0",
         "rxjs": "~7.4.0",
         "tslib": "^2.3.0",
         "web-animations-js": "^2.3.2",
@@ -34,14 +34,14 @@
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~13.0.4",
+        "@angular-devkit/build-angular": "^13.3.9",
         "@angular/cli": "~13.0.4",
         "@angular/compiler-cli": "~13.0.0",
         "@types/file-saver": "^2.0.5",
         "@types/jasmine": "~3.10.0",
         "@types/jasminewd2": "~2.0.8",
         "@types/node": "^12.11.1",
-        "codelyzer": "^6.0.0",
+        "codelyzer": "^0.0.28",
         "jasmine-core": "~3.10.0",
         "jasmine-spec-reporter": "~5.0.0",
         "karma": "~6.3.0",
